# lets-trade

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml  pyproject.toml  test_write.py
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.css  app.html
frontend/src/routes/: +page.svelte
python/: __init__.py  alpaca_connector.py  api_server.py  config.py  data_ingestion.py  ib_connector.py  options_greeks.py  orderbook.py
python/strategy/: __init__.py  base.py  market_maker.py  options_hedging_strategy.py  penny_stock_momentum.py
scripts/: run_backtest.py  start_services.sh
tests/: __init__.py  test_data_ingestion.py  test_ib_connector.py  test_orderbook.py  test_strategy.py
